# wayland-client

./: CMakeLists.txt
source/: any_sender_of.hpp  channel.hpp  connection.cpp  connection.hpp  construct.hpp  font.cpp  font.hpp  logging.cpp  logging.hpp  main.cpp  mdspan.hpp  message_header.hpp  protocol.cpp  protocol.hpp  renderer.cpp  renderer.hpp  window.cpp  window.hpp
tests/: CMakeLists.txt  test_buffer.cpp  test_connection.cpp  test_font.cpp  test_renderer.cpp  test_window.cpp
